--- a/contact.html
+++ b/contact.html
@@ -67,23 +67,25 @@ permalink: /kontakt/
   <div class="carousel" data-interval="4000">
     <!-- SLIDE 1 -->
     <a class="slide is-active"
-       href="https://example.com/clanak-1" target="_blank" rel="noopener">
-      <img src="{{ '/images/mediji/clanak-1.jpg' | url }}" alt="Naslov članka 1">
-      <span class="caption">Naslov članka 1</span>
+       href="https://www.24sata.hr/news/edukativno-druzenje-kod-vatrogasaca-jvp-a-zagreb-naucio-sam-gasiti-pozar-1044142"
+       target="_blank" rel="noopener">
+      <img src="{{ '/images/mediji/edukativno-druzenje.webp' | url }}" alt="Edukativno druženje — 24sata">
+      <span class="caption">Edukativno druženje — 24sata</span>
     </a>
-
     <!-- SLIDE 2 -->
     <a class="slide"
-       href="https://example.com/clanak-2" target="_blank" rel="noopener">
-      <img src="{{ '/images/mediji/clanak-2.jpg' | url }}" alt="Naslov članka 2">
-      <span class="caption">Naslov članka 2</span>
+       href="https://magazin.hrt.hr/price-iz-hrvatske/down-11626039"
+       target="_blank" rel="noopener">
+      <img src="{{ '/images/mediji/hrt-magazin.jpg' | url }}" alt="Priče iz Hrvatske — HRT">
+      <span class="caption">Priče iz Hrvatske — HRT</span>
     </a>
 
     <!-- SLIDE 3 -->
     <a class="slide"
-       href="https://example.com/clanak-3" target="_blank" rel="noopener">
-      <img src="{{ '/images/mediji/clanak-3.jpg' | url }}" alt="Naslov članka 3">
-      <span class="caption">Naslov članka 3</span>
+       href="https://dalmatinskiportal.hr/vijesti/vatrena-ljubav-savrseni-dan--sa--splitskim-vatrogascima/168539"
+       target="_blank" rel="noopener">
+      <img src="{{ '/images/mediji/vatrena-ljubav.jpg' | url }}" alt="Vatrena ljubav — Dalmatinski portal">
+      <span class="caption">Vatrena ljubav — Dalmatinski portal</span>
     </a>
   </div>
 
