--- a/prijavnice.html
+++ b/prijavnice.html
@@ -49,7 +49,7 @@ permalink: /prijavnice/
 <script>
 (function() {
   // Base path for PDFs (GitHub Pages safe)
-  var BASE = "{{ '/assets/pdfs/prijavnice/' | url }}";
+  var BASE = "{{ '/assets/prijavnice/' | url }}";
 
   // Clean filenames + friendly labels
   var FILES = [
