--- a/index.html
+++ b/index.html
@@ -6,88 +6,31 @@ permalink: /
 
 <!-- Banner -->
 <section id="banner">
-  <h2>Udruga Adonis</h2>
-  <p>Pomaganje mladima s poteškoćama i bez roditeljske skrbi</p>
-  <ul class="actions special">
-    <li><a href="{{ '/donacije/' | url }}" class="button primary">Doniraj sada</a></li>
-    <li><a href="{{ '/about/' | url }}" class="button">Saznaj više</a></li>
-  </ul>
+  <div class="filter">
+    <h2>Udruga Adonis</h2>
+    <p>Pomaganje mladima s poteškoćama i bez roditeljske skrbi</p>
+    <ul class="actions special">
+      <li><a href="{{ '/donacije/' | url }}" class="button primary">Doniraj sada</a></li>
+      <li><a href="{{ '/about/' | url }}" class="button">Saznaj više</a></li>
+    </ul>
+  </div>
 </section>
 
 <!-- Main Section -->
 <section id="main" class="container">
-
-  <!-- Introduction Box -->
-  <section class="box special">
-    <header class="major">
-      <h2>
-        Udruga ADONIS osnovana je kako bi djeci i mladima s poteškoćama u razvoju te onima bez roditeljske skrbi
-        pružila podršku, sigurnost i priliku za kvalitetniji život
-      </h2>
-      <p>
-        Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare adipiscing nunc adipiscing.
-        Condimentum turpis massa.
-      </p>
-    </header>
-    <span class="image featured">
-      <img src="{{ '/images/pic01.jpg' | url }}" alt="Udruga Adonis" />
-    </span>
-  </section>
-
-  <!-- Features Section -->
-  <section class="box special features">
-    <div class="features-row">
-      <section>
-        <span class="icon solid major fa-bolt accent2"></span>
-        <h3>Magna etiam</h3>
-        <p>
-          Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-          iaculis accumsan dolore magna aliquam veroeros.
-        </p>
-      </section>
-      <section>
-        <span class="icon solid major fa-chart-area accent3"></span>
-        <h3>Ipsum dolor</h3>
-        <p>
-          Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-          iaculis accumsan dolore magna aliquam veroeros.
-        </p>
-      </section>
-    </div>
-    <div class="features-row">
-      <section>
-        <span class="icon solid major fa-cloud accent4"></span>
-        <h3>Sed feugiat</h3>
-        <p>
-          Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-          iaculis accumsan dolore magna aliquam veroeros.
-        </p>
-      </section>
-      <section>
-        <span class="icon solid major fa-lock accent5"></span>
-        <h3>Enim phasellus</h3>
-        <p>
-          Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-          iaculis accumsan dolore magna aliquam veroeros.
-        </p>
-      </section>
-    </div>
-  </section>
-
-  <!-- Two Column Content -->
+    <!-- Two Column Content -->
   <div class="row">
     <div class="col-6 col-12-narrower">
       <section class="box special">
         <span class="image featured">
           <img src="{{ '/images/pic02.jpg' | url }}" alt="Projekt 1" />
         </span>
-        <h3>Sed lorem adipiscing</h3>
+        <h3>Projekti</h3>
         <p>
-          Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-          iaculis accumsan dolore magna aliquam veroeros.
+          Pogledajte projekte
         </p>
         <ul class="actions special">
-          <li><a href="{{ '/projekti/' | url }}" class="button alt">Learn More</a></li>
+          <li><a href="{{ '/projekti/' | url }}" class="button alt">Saznaj više</a></li>
         </ul>
       </section>
     </div>
@@ -97,33 +40,14 @@ permalink: /
         <span class="image featured">
           <img src="{{ '/images/pic03.jpg' | url }}" alt="Projekt 2" />
         </span>
-        <h3>Accumsan integer</h3>
+        <h3>Radionice</h3>
         <p>
-          Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus
-          iaculis accumsan dolore magna aliquam veroeros.
+          Pogledajte novosti
         </p>
         <ul class="actions special">
-          <li><a href="{{ '/projekti/' | url }}" class="button alt">Learn More</a></li>
+          <li><a href="{{ '/novosti/' | url }}" class="button alt">Saznaj više</a></li>
         </ul>
       </section>
-    </div>
   </div>
-
 </section>
 
-<!-- CTA Section -->
-<section id="cta">
-  <h2>Sign up for beta access</h2>
-  <p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-  <form>
-    <div class="row gtr-50 gtr-uniform">
-      <div class="col-8 col-12-mobilep">
-        <input type="email" name="email" id="email" placeholder="Email Address" />
-      </div>
-      <div class="col-4 col-12-mobilep">
-        <input type="submit" value="Sign Up" class="fit" />
-      </div>
-    </div>
-  </form>
-</section>
