--- a/mediji.html
+++ b/mediji.html
@@ -5,51 +5,142 @@ permalink: /mediji/
 ---
 
 <!-- IZ MEDIJA — SIMPLE CAROUSEL (all-in-one) -->
-<section id="iz-medija" class="box special">
-  <header class="major">
-    <h3>Iz medija — izdvojeno</h3>
-    <p>Tri priče — klikni sliku za detalje</p>
-  </header>
+<section id="main" class="container">
+    <section id="o-medijima" class="box">
+      <header class="major">
+        <h3>Mediji o Udruzi Adonis</h3>
+      </header>
+      <p>O radu Humanitarne udruge Adonis posljednjih je godina često pisano u medijima. Brojni portali i novine pratili su njihove inicijative i događanja, a sve u cilju jačanja inkluzije djece i mladih s poteškoćama u razvoju te širenja svijesti o važnosti zajedništva, humanosti i empatije.</p>
+      <p>U hrvatskoj javnosti posebno je zapažena kreativnost i inovativnost kojom se Udruga obraća djeci i mladima, ali i široj zajednici. Donatorske večeri, humanitarne akcije i edukativne aktivnosti redovito privlače pažnju medija te potvrđuju da trud i predanost Udruge imaju snažan odjek.</p>
+      <p>O Udruzi Adonis pisali su portali i tiskani mediji na lokalnoj i nacionalnoj razini, a njihove priče svjedoče o jednom predanom i iskrenom radu koji iz godine u godinu raste i okuplja sve veći broj ljudi.</p>
+    </section>
+  <section id="iz-medija" class="box special">
+    <header class="major">
+      <h3>Izdvojeno</h3>
+    </header>
 
-  <!-- Slides -->
-  <div class="carousel" data-interval="4000">
-    <!-- SLIDE 1 -->
-    <a class="slide is-active"
-       href="https://www.24sata.hr/news/edukativno-druzenje-kod-vatrogasaca-jvp-a-zagreb-naucio-sam-gasiti-pozar-1044142"
-       target="_blank" rel="noopener">
-      <img src="{{ '/images/mediji/edukativno-druzenje.webp' | url }}" alt="Edukativno druženje — 24sata">
-      <span class="caption">Edukativno druženje — 24sata</span>
-    </a>
+    <!-- Slides -->
+    <div class="carousel" data-interval="4000">
+      <!-- SLIDE 1 -->
+      <a class="slide is-active"
+        href="https://www.24sata.hr/news/edukativno-druzenje-kod-vatrogasaca-jvp-a-zagreb-naucio-sam-gasiti-pozar-1044142"
+        target="_blank" rel="noopener">
+        <img src="{{ '/images/mediji/edukativno-druzenje.webp' | url }}" alt="Edukativno druženje — 24sata">
+        <span class="caption">Edukativno druženje — 24sata</span>
+      </a>
 
-    <!-- SLIDE 2 -->
-    <a class="slide"
-       href="https://magazin.hrt.hr/price-iz-hrvatske/down-11626039"
-       target="_blank" rel="noopener">
-      <img src="{{ '/images/mediji/hrt-magazin.jpg' | url }}" alt="Priče iz Hrvatske — HRT">
-      <span class="caption">Priče iz Hrvatske — HRT</span>
-    </a>
+      <!-- SLIDE 2 -->
+      <a class="slide"
+        href="https://magazin.hrt.hr/price-iz-hrvatske/down-11626039"
+        target="_blank" rel="noopener">
+        <img src="{{ '/images/mediji/hrt-magazin.jpg' | url }}" alt="Priče iz Hrvatske — HRT">
+        <span class="caption">Priče iz Hrvatske — HRT</span>
+      </a>
 
-    <!-- SLIDE 3 -->
-    <a class="slide"
-       href="https://dalmatinskiportal.hr/vijesti/vatrena-ljubav-savrseni-dan--sa--splitskim-vatrogascima/168539"
-       target="_blank" rel="noopener">
-      <img src="{{ '/images/mediji/vatrena-ljubav.jpg' | url }}" alt="Vatrena ljubav — Dalmatinski portal">
-      <span class="caption">Vatrena ljubav — Dalmatinski portal</span>
-    </a>
-  </div>
+      <!-- SLIDE 3 -->
+      <a class="slide"
+        href="https://dalmatinskiportal.hr/vijesti/vatrena-ljubav-savrseni-dan--sa--splitskim-vatrogascima/168539"
+        target="_blank" rel="noopener">
+        <img src="{{ '/images/mediji/vatrena-ljubav.jpg' | url }}" alt="Vatrena ljubav — Dalmatinski portal">
+        <span class="caption">Vatrena ljubav — Dalmatinski portal</span>
+      </a>
+    </div>
 
-  <!-- Controls -->
-  <ul class="actions special" style="margin-top:.75rem">
-    <li><button class="button small prev" type="button">‹</button></li>
-    <li><button class="button small next" type="button">›</button></li>
-  </ul>
+    <!-- Controls -->
+    <ul class="actions special" style="margin-top:.75rem">
+      <li><button class="button small prev primary" type="button">‹</button></li>
+      <li><button class="button small next primary" type="button">›</button></li>
+    </ul>
 
-  <!-- Dots -->
-  <div class="dots" aria-label="Navigacija slajdova"></div>
+    <!-- Dots -->
+    <div class="dots" aria-label="Navigacija slajdova"></div>
+  
+    <div class="left-aligned">
+      <h3>Sve priče</h3>
+      <ul class="alt">
+        <li><a href="https://www.24sata.hr/news/edukativno-druzenje-kod-vatrogasaca-jvp-a-zagreb-naucio-sam-gasiti-pozar-1044142" target="_blank" rel="noopener">
+          Edukativno druženje kod vatrogasaca — 24sata
+        </a></li>
+
+        <li><a href="https://magazin.hrt.hr/price-iz-hrvatske/down-11626039" target="_blank" rel="noopener">
+          Priče iz Hrvatske — HRT Magazin
+        </a></li>
+
+        <li><a href="https://dalmatinskiportal.hr/vijesti/vatrena-ljubav-savrseni-dan--sa--splitskim-vatrogascima/168539" target="_blank" rel="noopener">
+          Vatrena ljubav — Dalmatinski portal
+        </a></li>
+
+        <li><a href="https://www.dalmacijadanas.hr/4-ljetni-dani-mladih-downica-dani-koji-se-pamte-srcem/" target="_blank" rel="noopener">
+          Dani koji se pamte srcem — Dalmacija Danas
+        </a></li>
+
+        <li><a href="https://www.dalmacijadanas.hr/humanitarna-akcija-za-djecu-doma-maestral-mozete-donirati-skenom-qr-koda-evo-gdje-mozete-ostaviti-osnovne-higijenske-potrepstine/" target="_blank" rel="noopener">
+          Humanitarna akcija za djecu doma Maestral — Dalmacija Danas
+        </a></li>
+
+        <li><a href="https://www.youtube.com/watch?v=1UxIBix6S7Q" target="_blank" rel="noopener">
+          TV Jadran — YouTube
+        </a></li>
+
+        <li><a href="https://www.armus.hr/doga%C4%91anja/artmid/1047/articleid/347/dan-za-pam%C4%87enje-u-srcu-anti%C4%8Dke-salone" target="_blank" rel="noopener">
+          Dan za pamćenje u srcu antičke Salone — Armus
+        </a></li>
+
+        <li><a href="https://www.034portal.hr/na-3-ljetnim-danima-mladih-downica-u-splitu-i-pozezanin-fabijan-627" target="_blank" rel="noopener">
+          3. Ljetni dani mladih Downica — 034 Portal
+        </a></li>
+
+        <li><a href="https://www.facebook.com/djh.hrt/videos/revija-djece-s-down-sindromom/1416979258951084/" target="_blank" rel="noopener">
+          Revija djece s Down sindromom — Facebook
+        </a></li>
+
+        <li><a href="https://dalmatinskiportal.hr/zivot/savrseni-manekeni--djeca-s-down-sindromom-prosetala-modnom-pistom/171703" target="_blank" rel="noopener">
+          Savršeni manekeni — Dalmatinski portal
+        </a></li>
+
+        <li><a href="https://dubrovnikinsider.hr/foto-odrzani-jos-jedni-ljetni-dani-mladih-downica/" target="_blank" rel="noopener">
+          Ljetni dani mladih Downica — Dubrovnik Insider
+        </a></li>
+
+        <li><a href="https://in-portal.hr/udruga-adonis-ljetni-dani-mladih-downica/" target="_blank" rel="noopener">
+          Udruga Adonis — In Portal
+        </a></li>
+
+        <li><a href="https://www.24sata.hr/lifestyle/djeca-s-downovim-sindromom-nosila-su-modnu-reviju-na-ljetnim-danima-malih-downica-846042/9" target="_blank" rel="noopener">
+          Djeca s Downovim sindromom na modnoj reviji — 24sata
+        </a></li>
+
+        <li><a href="https://www.slatkopedija.hr/povodom-svjetskog-dana-osoba-s-downovim-sindromom-predstavljamo-inkluzivnu-slikovnicu-koju-potpisuje-nasa-urednica/" target="_blank" rel="noopener">
+          Inkluzivna slikovnica — Slatkopedija
+        </a></li>
+
+        <li><a href="https://zvonimirsolin.hr/solinska/koncem-mjeseca-svibnja-u-kulturnomu-centru-u-vranjicu-odrzana-djecja-likovne-radionice-na-temu-more-lokalno-djelovanje-i-bioraznolikost" target="_blank" rel="noopener">
+          Dječja likovna radionica — Zvonimir Solin
+        </a></li>
+
+        <li><a href="https://www.facebook.com/gradsisak/posts/i-mi-mo%C5%BEemo-biti-vatrogascijavna-vatrogasna-postrojba-grada-siska-i-dvd-mladost-/757589346408762/" target="_blank" rel="noopener">
+          I mi možemo biti vatrogasci — Facebook
+        </a></li>
+
+        <li><a href="https://ezadar.net.hr/dogadaji/815417/hu-adonis-i-jvp-grada-zadra-organiziraju-projekt-i-mi-mozemo-biti-vatrogasci/" target="_blank" rel="noopener">
+          Projekt "I mi možemo biti vatrogasci" — eZadar
+        </a></li>
+
+        <li><a href="https://www.facebook.com/KucaBrezovica/posts/humanitarna-udruga-adonis-omogu%C4%87ila-nam-je-sudjelovanje-u-aktivnosti-projekta-gr/1468181244298438/" target="_blank" rel="noopener">
+          Projekt Gradska kuća Brezovica — Facebook
+        </a></li>
+      </ul>
+    </div>
+
+  </section>
 
   <!-- Inline CSS (Alpha-friendly) -->
   <style>
     /* Layout container */
+    .left-aligned
+    {
+      text-align: left;
+    }
     #iz-medija .carousel {
       position: relative;
       width: 100%;
@@ -71,12 +162,14 @@ permalink: /mediji/
       background: #111;
     }
     #iz-medija .slide.is-active { opacity: 1; visibility: visible; z-index: 1; }
+
     /* Images forced to uniform visual size */
     #iz-medija .slide img {
       width: 100%; height: 100%;
       object-fit: cover; object-position: center;
       display: block; user-select: none; -webkit-user-drag: none;
     }
+
     /* Caption chip */
     #iz-medija .caption {
       position: absolute; left: .75rem; bottom: .75rem;
@@ -84,15 +177,18 @@ permalink: /mediji/
       padding: .4rem .6rem; border-radius: .35rem; max-width: calc(100% - 1.5rem);
       text-wrap: balance;
     }
+
     /* Dots */
     #iz-medija .dots { display:flex; gap:.5rem; justify-content:center; align-items:center; margin-top:.5rem; }
     #iz-medija .dot { width:.55rem; height:.55rem; border-radius:50%; background:rgba(0,0,0,.15); border:0; cursor:pointer; padding:0; }
     #iz-medija .dot[aria-current="true"] { background: rgba(0,0,0,.5); }
+
     /* Mobile */
     @media screen and (max-width: 736px) {
       #iz-medija .carousel { height: 220px; }
       #iz-medija .caption { font-size: .85rem; }
     }
+
     /* Respect reduced motion */
     @media (prefers-reduced-motion: reduce) { #iz-medija .slide { transition: none; } }
 
@@ -153,27 +249,3 @@ permalink: /mediji/
       render(); start();
     })();
   </script>
-</section>
-
-<!-- MEDIJI — TITLES ONLY LIST -->
-<section id="mediji-list" class="box">
-  <header class="major">
-    <h3>Mediji — popis članaka</h3>
-    <p>Samo naslovi, bez slika.</p>
-  </header>
-
-  <ul class="alt">
-    <li><a href="https://www.24sata.hr/news/edukativno-druzenje-kod-vatrogasaca-jvp-a-zagreb-naucio-sam-gasiti-pozar-1044142" target="_blank" rel="noopener">
-      Edukativno druženje kod vatrogasaca — 24sata
-    </a></li>
-    <li><a href="https://magazin.hrt.hr/price-iz-hrvatske/down-11626039" target="_blank" rel="noopener">
-      Priče iz Hrvatske — HRT Magazin
-    </a></li>
-    <li><a href="https://dalmatinskiportal.hr/vijesti/vatrena-ljubav-savrseni-dan--sa--splitskim-vatrogascima/168539" target="_blank" rel="noopener">
-      Vatrena ljubav — Dalmatinski portal
-    </a></li>
-
-    <!-- Add more as needed -->
-    <!-- <li><a href="https://example.com/clanak" target="_blank" rel="noopener">Naslov članka — Izvor</a></li> -->
-  </ul>
-</section>
